--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "test:coverage": "jest --coverage",
         "dev": "nodemon",
         "db:create": "npx sequelize db:create",
-        "db:migrate": "npx sequelize db:migrate --migrations-path ./src/migrations --models-path ./src/models",
+        "db:migrate": "./node_modules/.bin/ts-node ./src/db/migrations/migration-all-table.ts",
         "db:drop": "npx sequelize db:drop",
         "start-gendoc": "node ./src/swagger.js"
     },
