--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,13 +1,13 @@
 require("@babel/register")({
-  configFile: "./.babelrc",
-  extensions: [".js", ".ts"],
+    configFile: "./babel.config.json",
+    extensions: [".js", ".ts"],
 });
 
 const path = require("path");
 
 module.exports = {
-  config: path.resolve("db", "config.ts"),
-  "models-path": path.resolve("db", "models"),
-  "seeders-path": path.resolve("db", "seeders"),
-  "migrations-path": path.resolve("db", "migrations"),
+    config: path.resolve("src/db/config", "config.ts"),
+    "models-path": path.resolve("src/db", "models"),
+    "seeders-path": path.resolve("src/db", "seeders"),
+    "migrations-path": path.resolve("src/db", "migrations"),
 };
