--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@babel/runtime": "^7.23.4",
         "@typescript-eslint/eslint-plugin": "^6.12.0",
         "@typescript-eslint/parser": "^6.12.0",
+        "axios": "^1.6.2",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "eslint-plugin-import": "^2.29.0",
