--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,6 @@
 version: "3.3"
 services:
-    nginx:
-        image: nginx
-        ports:
-            - 8080:8080
-        extra_hosts:
-            - "host.docker.internal:host-gateway"
-        volumes:
-            - ./nginx.conf:/etc/nginx/nginx.conf
-            - ./nginx.server.conf:/etc/nginx/nginx.server.conf
-        container_name: front-web
+    express:
+        build: .
+        container_name: readbird
+        ports: 8081:8080
