--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version: "3.3"
 services:
     express:
-        build: .
-        container_name: readbird
-        ports: 8081:8080
+        - build: .
+        - container_name: readbird
+        - ports: 8081:8080
