--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
         "dotenv": "^16.3.1",
         "eslint-plugin-import": "^2.29.0",
         "express": "^4.18.2",
+        "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.6.5",
         "nodemon": "^3.0.1",
+        "redis": "^4.6.11",
         "sequelize": "^6.35.1",
         "sequelize-cli": "^6.3.0",
         "swagger-cli": "^4.0.4",
@@ -42,6 +44,7 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/jest": "^29.5.10",
+        "@types/jsonwebtoken": "^9.0.5",
         "@types/node": "^20.9.4",
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.6",
