--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "redis": "^4.6.11",
         "sequelize": "^6.35.1",
         "sequelize-cli": "^6.3.0",
+        "swagger-autogen": "^2.23.7",
         "swagger-cli": "^4.0.4",
         "swagger-ui-express": "^5.0.0"
     },
