--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "dotenv": "^16.3.1",
         "eslint-plugin-import": "^2.29.0",
         "express": "^4.18.2",
+        "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
         "mysql2": "^3.6.5",
         "nodemon": "^3.0.1",
