--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@babel/plugin-transform-runtime": "^7.23.4",
         "@babel/register": "^7.22.15",
         "@babel/runtime": "^7.23.4",
+        "@types/morgan": "^1.9.9",
         "@typescript-eslint/eslint-plugin": "^6.12.0",
         "@typescript-eslint/parser": "^6.12.0",
         "axios": "^1.6.2",
@@ -30,6 +31,7 @@
         "express": "^4.18.2",
         "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
+        "morgan": "^1.10.0",
         "mysql2": "^3.6.5",
         "nodemon": "^3.0.1",
         "redis": "^4.6.11",
@@ -37,7 +39,9 @@
         "sequelize-cli": "^6.3.0",
         "swagger-autogen": "^2.23.7",
         "swagger-cli": "^4.0.4",
-        "swagger-ui-express": "^5.0.0"
+        "swagger-ui-express": "^5.0.0",
+        "winston": "^3.11.0",
+        "winston-daily-rotate-file": "^4.7.1"
     },
     "devDependencies": {
         "@babel/core": "^7.23.3",
