--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "db:drop": "npx sequelize db:drop",
         "db:migrate": "./node_modules/.bin/ts-node ./src/db/migrations/migration-all-table.ts",
         "db:seed": "npx sequelize db:seed:all",
-        "start-gendoc": "node ./src/swagger.js"
+        "start-gendoc": "node ./src/swagger.js",
+        "artillery": "npx artillery run src/util/artillery/loadtest.json -o src/util/artillery/results/loadtest_result.json",
+        "artillery:report": "npx artillery report src/util/artillery/results/loadtest_result.json"
     },
     "author": "",
     "license": "ISC",
@@ -20,6 +22,7 @@
         "@babel/register": "^7.22.15",
         "@babel/runtime": "^7.23.4",
         "@types/morgan": "^1.9.9",
+        "@types/node-cron": "^3.0.11",
         "@typescript-eslint/eslint-plugin": "^6.12.0",
         "@typescript-eslint/parser": "^6.12.0",
         "axios": "^1.6.2",
@@ -29,10 +32,12 @@
         "dotenv": "^16.3.1",
         "eslint-plugin-import": "^2.29.0",
         "express": "^4.18.2",
+        "googleapis": "^129.0.0",
         "helmet": "^7.1.0",
         "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.0",
         "mysql2": "^3.6.5",
+        "node-cron": "^3.0.3",
         "nodemon": "^3.0.1",
         "redis": "^4.6.11",
         "sequelize": "^6.35.1",
@@ -55,6 +60,7 @@
         "@types/swagger-jsdoc": "^6.0.4",
         "@types/swagger-ui-express": "^4.1.6",
         "@types/validator": "^13.11.7",
+        "artillery": "^2.0.3",
         "babel-jest": "^29.7.0",
         "eslint": "^8.54.0",
         "eslint-config-prettier": "^9.0.0",
