--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "start": "npx tsc && node --max-old-space-size=4096 build/app.js",
+        "start": "export NODE_OPTIONS=-max-old-space-size=4096 && tsc && node build/app.js",
         "test": "jest",
         "test:coverage": "jest --coverage",
         "dev": "nodemon",
